cka-with-practice-tests-udemy/14-mock-exams/03-mock-exam-lab/multi-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: multi-pod
spec:
  containers:
  - name: alpha
    image: nginx
    restartPolicy: Never
  - name: beta
    image: busybox
    command: ['sleep', '4800']
    restartPolicy: Never
