cka-with-practice-tests-udemy/14-mock-exams/03-mock-exam-lab/pvviewer-pod-sa.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pvviewer
spec:
  containers:
  - image: redis
    name: pvviewer
  serviceAccountName: pvviewer
